# GrinPlusPlus

./: .clang-format  .gitignore  .gitmodules  BUIDL.md  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  README.md  RunAllTests.cpp
BlockChain/: BlockChainServerImpl.cpp  BlockChainServerImpl.h  BlockHydrator.cpp  BlockHydrator.h  BlockIndex.h  BlockStore.cpp  BlockStore.h  CMakeLists.txt  Chain.cpp  Chain.h  ChainResyncer.cpp  ChainResyncer.h  ChainState.cpp  ChainState.h  ChainStore.cpp  ChainStore.h  CommitmentUtil.cpp  CommitmentUtil.h  CompactBlockFactory.cpp  CompactBlockFactory.h  LockedChainState.h  OrphanPool.h  TransactionPool.cpp  TransactionPool.h
BlockChain/OrphanPool/: Orphan.h  OrphanPool.cpp  OrphanPool.h
BlockChain/Processors/: BlockHeaderProcessor.cpp  BlockHeaderProcessor.h  BlockProcessor.cpp  BlockProcessor.h  TxHashSetProcessor.cpp  TxHashSetProcessor.h
BlockChain/Validators/: BlockHeaderValidator.cpp  BlockHeaderValidator.h  BlockValidator.cpp  BlockValidator.h  PoWValidator.cpp  PoWValidator.h  TransactionBodyValidator.cpp  TransactionBodyValidator.h  TransactionValidator.cpp  TransactionValidator.h
Config/: CMakeLists.txt  ConfigManager.cpp  ConfigProps.h  ConfigReader.cpp  ConfigReader.h  ConfigWriter.cpp  ConfigWriter.h
Core/: CMakeLists.txt  File.cpp  roaring.c
Core/Models/: BlockHeader.cpp  CompactBlock.cpp  FullBlock.cpp  OutputIdentifier.cpp  ProofOfWork.cpp  ShortId.cpp  Transaction.cpp  TransactionBody.cpp  TransactionInput.cpp  TransactionKernel.cpp  TransactionOutput.cpp
Core/Tests/: CMakeLists.txt
Core/Validation/: TransactionBodyValidator.cpp
Core/mman-win32/: mman.c  mman.h
Crypto/: AES256.cpp  AES256.h  AggSig.cpp  AggSig.h  Blake2b.cpp  Bulletproofs.cpp  Bulletproofs.h  CMakeLists.txt  Crypto.cpp  ECDH.cpp  Pedersen.cpp  Pedersen.h  PublicKeys.cpp  PublicKeys.h  RandomNumberGenerator.cpp  Secp256k1Wrapper.cpp  Secp256k1Wrapper.h  aes.cpp  hmac_sha256.cpp  hmac_sha512.cpp  libsecp256k1-config-mac.h  libsecp256k1-config.h  ripemd160.cpp  sha256.cpp  sha512.cpp  siphash.h
Crypto/Tests/: Test_AddCommitments.cpp  Test_AggSig.cpp
Crypto/scrypt/: crypto_scrypt-ref.cpp  crypto_scrypt.h  sha256.cpp
Crypto/secp256k1-zkp/: Makefile.am  configure.ac
Database/: BlockDBImpl.cpp  BlockDBImpl.h  CMakeLists.txt  DatabaseImpl.cpp  DatabaseImpl.h  PeerDBImpl.cpp  PeerDBImpl.h
P2P/: BaseMessageRetriever.cpp  BaseMessageRetriever.h  BlockLocator.cpp  BlockLocator.h  CMakeLists.txt  Common.h  ConnectedPeer.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  Dandelion.cpp  Dandelion.h  IPAddressUtil.cpp  IPAddressUtil.h  MessageProcessor.cpp  MessageProcessor.h  MessageRetriever.cpp  MessageRetriever.h  MessageSender.cpp  MessageSender.h  P2PServerImpl.cpp  P2PServerImpl.h  Pipeline.cpp  Pipeline.h  Socket.h  SocketHelper.cpp  SocketHelper.h
P2P/Messages/: BanReasonMessage.h  BlockMessage.h  CompactBlockMessage.h  ErrorMessage.h  GetBlockMessage.h  GetCompactBlockMessage.h  GetHeadersMessage.h  GetPeerAddressesMessage.h  GetTransactionMessage.h  HandMessage.h  HeadersMessage.h  Message.h  MessageTypes.h  PeerAddressesMessage.h  PongMessage.h  RawMessage.h  StemTransactionMessage.h  TransactionKernelMessage.h  TransactionMessage.h  TxHashSetArchiveMessage.h  TxHashSetRequestMessage.h  headermessage.h  messageheader.h  shakemessage.h
P2P/Seed/: ConnectionFactory.cpp  ConnectionFactory.h  DNSSeeder.cpp  DNSSeeder.h  HandShake.cpp  HandShake.h  PeerManager.cpp  PeerManager.h  Seeder.cpp  Seeder.h
P2P/Sync/: BlockSyncer.cpp  BlockSyncer.h  HeaderSyncer.cpp  HeaderSyncer.h  StateSyncer.cpp  StateSyncer.h  Syncer.cpp  Syncer.h
PMMR/: CMakeLists.txt  HeaderMMRImpl.cpp  HeaderMMRImpl.h  KernelMMR.cpp  KernelMMR.h  KernelSignatureValidator.cpp  KernelSignatureValidator.h  KernelSumValidator.cpp  KernelSumValidator.h  OutputPMMR.cpp  OutputPMMR.h  RangeProofPMMR.cpp  RangeProofPMMR.h  TxHashSetImpl.cpp  TxHashSetImpl.h  TxHashSetManager.cpp  TxHashSetValidationResult.h  TxHashSetValidator.cpp  TxHashSetValidator.h
PMMR/Common/: DataFile.h  HashFile.cpp  HashFile.h  LeafSet.cpp  LeafSet.h  MMR.h  MMRHashUtil.cpp  MMRHashUtil.h  MMRUtil.cpp  MMRUtil.h  MerkleProof.h  PruneList.cpp  PruneList.h  PruneableMMR.h
PMMR/Tests/: CMakeLists.txt  TestMain.cpp  Test_MMRUtil.cpp  Test_PruneList.cpp  Test_PruneList_GetLeafShift.cpp  Test_PruneList_GetShift.cpp
PMMR/Zip/: TxHashSetZip.cpp  TxHashSetZip.h  ZipFile.cpp  ZipFile.h  Zipper.cpp  Zipper.h
PoW/: CMakeLists.txt  Cuckaroo.h  Cuckarood.cpp  Cuckatoo.cpp  Cuckatoo.h  Difficulty.h  DifficultyCalculator.cpp  DifficultyLoader.cpp  DifficultyLoader.h  HeaderInfo.h  PoWManager.cpp  PoWType.h  PoWUtil.cpp  PoWUtil.h  PoWValidator.cpp  PoWValidator.h
Server/: BlockAPI.cpp  BlockAPI.h  CMakeLists.txt  HeaderAPI.cpp  HeaderAPI.h  JSONFactory.cpp  JSONFactory.h  Main.cpp  NodeRestServer.cpp  NodeRestServer.h  RestServer.cpp  RestServer.h  RestUtil.h  Server.cpp  Server.h  ServerContainer.h  ShutdownManager.h
Server/API/: BlockAPI.cpp  BlockAPI.h  ChainAPI.cpp  ChainAPI.h  HeaderAPI.cpp  (+7 more)
TxPool/: BulletProofsCache.h  CMakeLists.txt  CutThroughUtil.h  Pool.cpp  Pool.h  TransactionAggregator.cpp  TransactionAggregator.h  TransactionBodyValidator.cpp  TransactionBodyValidator.h  TransactionPoolImpl.cpp  TransactionPoolImpl.h  TransactionValidator.cpp  TransactionValidator.h  TxPoolEntry.h  ValidTransactionFinder.cpp  ValidTransactionFinder.h
Wallet/: CMakeLists.txt  CoinSelection.cpp  CoinSelection.h  Finalizer.h  LockedWallet.h  OutputRestorer.cpp  Receiver.h  Sender.cpp  Sender.h  SessionManager.cpp  SessionManager.h  SignatureUtil.h  SlateBuilder.cpp  SlateBuilder.h  TransactionBuilder.h  Wallet.cpp  Wallet.h  WalletCoin.h  WalletManagerImpl.cpp  WalletManagerImpl.h  WalletRefresher.cpp  WalletRefresher.h  WalletRestorer.cpp  WalletRestorer.h  WalletServerImpl.cpp  WalletServerImpl.h  WalletUtil.cpp  WalletUtil.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  RunAllTests.cpp  TestHelper.h  TestMiner.h  TestModels.h  TestServer.h  TxBuilder.h  instance.cpp
(+1196 files in other folders)
