if(MSVC)
    add_compile_options(/Zc:__cplusplus /W4 /WX)
endif()

add_subdirectory(API)
add_subdirectory(Common)
add_subdirectory(Crypto)
add_subdirectory(Core)
add_subdirectory(PMMR)
add_subdirectory(PoW)
add_subdirectory(Database)
add_subdirectory(BlockChain)
add_subdirectory(TxPool)
add_subdirectory(Net)
add_subdirectory(P2P)
add_subdirectory(Wallet)
add_subdirectory(Server)